# incsl_summer_2023

./: LICENSE  README.md
Hwang/: README.md
Hyeong_Jun/: README.md
Hyeong_Jun/robotics_camp/: CMakeLists.txt  package.xml
Hyeong_Jun/robotics_camp/src/: feed_forward_circle.cpp  feed_forward_eight.cpp
Joo_Hyun/: README.md  feed_forward_8_shape.cpp  feed_forward_circle.cpp
Kyeong_Wook/: README.md
Min_Ho/: README.md
Min_Ho/main/: CMakeLists.txt  circle_main.cpp  eight_main.cpp  feedback_main.cpp  package.xml  robot_fb_main.cpp  robot_ff_main.cpp  robot_main.cpp
Min_Su/: README.md
MinhoLee/: README.md
so_yeong/: README.md
so_yeong/robotics_camp_sy/: LICENSE  README.md  package.xml  setup.cfg  setup.py
so_yeong/robotics_camp_sy/robotics_camp_sy/: feed_forward_circle.py
sojin/: CMakeLists.txt  README.md  ff_8.cpp  ff_circle.cpp  package.xml
yongbin/: README.md  test.py
yongbin/ros2_ws/install/: local_setup.sh  setup.sh
yongbin/ros2_ws/install/test_pubsub/lib/test_pubsub/: listener  talker
yongbin/ros2_ws/install/test_pubsub/share/test_pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yongbin/ros2_ws/install/turtle_control/lib/turtle_control/: cricle  eight
yongbin/ros2_ws/install/turtle_control/share/turtle_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yongbin/ros2_ws/log/: latest_build
yongbin/ros2_ws/src/test_pubsub/: setup.cfg  setup.py
yongbin/ros2_ws/src/test_pubsub/test_pubsub/: publisher_member_function.py
yongbin/ros2_ws/src/turtle_control/turtle_control/: draw_eight.py
yongbin/src/: draw_circle.py  draw_eight.py  fb_draw_eight.py  teleop_key.py  teleopkey.py
yongbin/turtle_control/: setup.cfg  setup.py
yongbin/turtle_control/turtle_control/: teleop_key.py
